kube/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: componentlibrary-deployment
spec:
  selector:
    matchLabels:
      app: componentlibrary
  replicas: 1
  template:
    metadata:
      labels:
        app: componentlibrary
    spec:
      containers:
      - name: componentlibrary        
        image: aagacr.azurecr.io/p2p/componentlibrary:latest #This is replaced with buildid in pipeline
        ports:
        - name: admin
          containerPort: 3000
        resources:
          limits:
            cpu: 200m
            memory: 800Mi
          requests:
            cpu: 100m
            memory: 400Mi
        
---
apiVersion: v1
kind: Service
metadata:  
  name: componentlibrary-services
spec:  
  selector:
    app: componentlibrary
  ports:
    - name: api
      protocol: TCP
      port: 3000
      targetPort: 3000
