kube/ingress-pr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: componentlibrary-ingress-#{SYSTEM_PULLREQUEST_PULLREQUESTID}#
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - componentlibrary-#{SYSTEM_PULLREQUEST_PULLREQUESTID}#.w2.ecomm-test-aks.alaskaair.com
    secretName: tls-secret-#{SYSTEM_PULLREQUEST_PULLREQUESTID}#
  rules:
  - host: componentlibrary-#{SYSTEM_PULLREQUEST_PULLREQUESTID}#.w2.ecomm-test-aks.alaskaair.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: componentlibrary-services-#{SYSTEM_PULLREQUEST_PULLREQUESTID}#
            port:
              number: 3000
