kube/ingress-qa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: componentlibrary-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - componentlibrary.w2.ecomm-qa-aks.alaskaair.com
    secretName: tls-secret
  rules:
  - host: componentlibrary.w2.ecomm-qa-aks.alaskaair.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: componentlibrary-services
            port:
              number: 3000
